--- a/app/src/main/res/layout/activity_leads.xml
+++ b/app/src/main/res/layout/activity_leads.xml
@@ -60,6 +60,7 @@
                     android:layout_marginStart="@dimen/_3sdp"
                     android:layout_marginTop="@dimen/_15sdp"
                     android:text="@string/lead_name"
+                    android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -69,6 +70,7 @@
                     android:layout_marginStart="@dimen/_15sdp"
                     android:layout_marginTop="@dimen/_15sdp"
                     android:text="@string/mobile_number"
+                    android:textColor="@color/black"
                     app:layout_constraintEnd_toStartOf="@id/labelAttemptNumber"
                     app:layout_constraintStart_toEndOf="@id/labelLeadName"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -79,13 +81,14 @@
                     android:layout_marginTop="@dimen/_15sdp"
                     android:layout_marginEnd="@dimen/_2sdp"
                     android:text="@string/attempt_no"
+                    android:textColor="@color/black"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <View
                     android:id="@+id/viewBorder"
                     style="@style/viewBorderStyle"
-                    android:background="@color/textBlue"
+                    android:background="@color/black"
                     android:layout_marginTop="@dimen/_5sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
