--- a/app/src/main/res/layout/item_lead_list.xml
+++ b/app/src/main/res/layout/item_lead_list.xml
@@ -1,54 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    style="@style/MainConstraintStyle"
-    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/txtLeadName"
-        tools:text="Pratik D"
-        android:textColor="@color/textBlue"
-        android:maxLines="1"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginStart="@dimen/_2sdp"
-        android:maxLength="15"
-        app:layout_constraintStart_toStartOf="parent"
-       style="@style/common_text_style"/>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        style="@style/MainConstraintStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/txtMobileNumber"
-        tools:text="123456789"
-        android:textColor="@color/textBlue"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/_20sdp"
-       app:layout_constraintEnd_toStartOf="@id/ivLeadList"
-        android:layout_marginEnd="@dimen/_50sdp"
-       style="@style/common_text_style"/>
+        <TextView
+            android:id="@+id/txtLeadName"
+            style="@style/common_text_style"
+            android:layout_marginStart="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:maxLength="15"
+            android:maxLines="1"
+            android:textColor="@color/black"
+            android:textStyle="normal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Pratik D" />
 
-    <ImageView
-        android:id="@+id/ivLeadList"
-        tools:src="@drawable/hand"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="@dimen/_20sdp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/_20sdp"
-       android:layout_marginEnd="@dimen/_20sdp"
-        android:layout_height="@dimen/_20sdp"
-         />
+        <TextView
+            android:id="@+id/txtMobileNumber"
+            style="@style/common_text_style"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_50sdp"
+            android:textColor="@color/black"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toStartOf="@id/ivLeadList"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="123456789" />
 
-
-    <View
-        android:id="@+id/viewBorder"
-        style="@style/viewBorderStyle"
-        android:background="@color/textBlue"
-        android:layout_marginTop="@dimen/_15sdp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtLeadName" />
+        <ImageView
+            android:id="@+id/ivLeadList"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/hand" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <View
+            android:id="@+id/viewBorder"
+            style="@style/viewBorderStyle"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:background="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtLeadName" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
