PaymentInfoOfCustomerActivity added and PaymentNotificationOfCustomerActivity changes of button alignment and CustomButtonStyle added

--- a/app/src/main/res/layout/activity_payment_notification_of_customer.xml
+++ b/app/src/main/res/layout/activity_payment_notification_of_customer.xml
@@ -12,12 +12,12 @@
         android:id="@+id/paymentNotificationOfCustomerScrollVIew"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+       >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/rootConstraintLayout"
@@ -618,10 +618,9 @@
 
             <Button
                 android:id="@+id/btnReadyToPay"
-                style="@style/BigButtonStyle"
+                style="@style/CustomButtonStyle"
                 android:textStyle="normal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+
                 android:backgroundTint="@color/green"
                 android:text="@string/ready_to_pay"
                 android:layout_marginStart="@dimen/_10sdp"
@@ -631,10 +630,9 @@
 
             <Button
                 android:id="@+id/btnNotReadyToPay"
-                style="@style/BigButtonStyle"
+                style="@style/CustomButtonStyle"
                 android:textStyle="normal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+
                 android:layout_marginTop="@dimen/_5sdp"
                 android:backgroundTint="@color/red"
                 android:text="@string/not_ready_to_pay"
@@ -645,10 +643,9 @@
 
             <Button
                 android:id="@+id/btnAskedToCallBackLater"
-                style="@style/BigButtonStyle"
+                style="@style/CustomButtonStyle"
                 android:textStyle="normal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+
                 android:backgroundTint="@color/brightOrange"
                 android:text="@string/ask_to_call_back_later"
                 android:layout_marginStart="@dimen/_10sdp"
@@ -659,10 +656,9 @@
 
             <Button
                 android:id="@+id/btnOthers"
-                style="@style/BigButtonStyle"
+                style="@style/CustomButtonStyle"
                 android:textStyle="normal"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_40sdp"
+
                 android:backgroundTint="@color/grey"
                 android:text="@string/others"
                 app:layout_constraintTop_toTopOf="@id/btnAskedToCallBackLater"
