--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,6 +30,7 @@
     <color name="brightOrange">#FFA400</color>
     <color name="barnRed">#7C0A03</color>
     <color name="chilliRed">#C21807</color>
+    <color name="NewColor">#23C9D1</color>
 
 
 
