--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -48,7 +48,6 @@
     </style>
 
 
-
     <style name="viewBorderStyle">
         <item name="android:layout_height">@dimen/_1sdp</item>
         <item name="android:layout_width">match_parent</item>
@@ -63,17 +62,17 @@
     </style>
 
 
-   <style name="editTextStyle">
-       <item name="android:fontFamily">sans-serif</item>
-       <item name="android:layout_marginStart">@dimen/_10sdp</item>
-       <item name="android:layout_marginEnd">@dimen/_10sdp</item>
-       <item name="hintTextColor">@color/borderColor</item>
-       <item name="android:layout_width">match_parent</item>
-       <item name="android:layout_height">wrap_content</item>
-       <item name="android:textSize">@dimen/_14ssp</item>
-       <item name="android:textColor">@color/black</item>
-       <item name="android:background">@drawable/edit_text_bottom_border</item>
-   </style>
+    <style name="editTextStyle">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:layout_marginStart">@dimen/_10sdp</item>
+        <item name="android:layout_marginEnd">@dimen/_10sdp</item>
+        <item name="hintTextColor">@color/borderColor</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/_14ssp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@drawable/edit_text_bottom_border</item>
+    </style>
 
     <style name="ButtonStyle">
         <item name="android:layout_marginStart">@dimen/_30sdp</item>
@@ -104,8 +103,19 @@
     </style>
 
 
+    <style name="CustomButtonStyle">
+        <item name="android:textStyle">bold</item>
+        <item name="cornerRadius">@dimen/_10sdp</item>
+        <item name="android:textSize">@dimen/_11ssp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_width">@dimen/_130sdp</item>
+        <item name="android:layout_height">@dimen/_60sdp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="textAllCaps">true</item>
+    </style>
+
     <style name="MainConstraintStyle">
-       <item name="android:background">@color/white</item>
+        <item name="android:background">@color/white</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">match_parent</item>
     </style>
