--- a/app/src/main/res/layout/activity_payment_info_of_customer.xml
+++ b/app/src/main/res/layout/activity_payment_info_of_customer.xml
@@ -618,7 +618,7 @@
                     android:id="@+id/btnWillPayLumpsum"
                     style="@style/CustomButtonStyle"
                     android:layout_marginStart="@dimen/_10sdp"
-                    android:backgroundTint="@color/green"
+                    android:backgroundTint="@color/blueButton"
                     android:text="@string/will_pay_lumpsum"
                     android:textStyle="normal"
                     app:layout_constraintStart_toStartOf="parent"
@@ -630,45 +630,32 @@
                     style="@style/CustomButtonStyle"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_10sdp"
-                    android:backgroundTint="@color/red"
+                    android:backgroundTint="@color/blueButton"
                     android:text="@string/already_paid"
                     android:textStyle="normal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/ivHistory" />
 
 
-                <TextView
-                    android:id="@+id/txtUploadFile"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_1sdp"
-                    android:text="@string/upload"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_12ssp"
-                    android:textStyle="bold"
-                    android:visibility="invisible"
-                    app:layout_constraintEnd_toEndOf="@+id/btnAlreadyPaid"
-                    app:layout_constraintStart_toStartOf="@+id/btnAlreadyPaid"
-                    app:layout_constraintTop_toBottomOf="@+id/btnAlreadyPaid" />
 
                 <ImageView
-                    android:id="@+id/ivUploadFile"
-                    android:layout_width="@dimen/_30sdp"
-                    android:layout_height="@dimen/_16sdp"
+                    android:id="@+id/ivCancelFileUpload"
+                    android:layout_width="@dimen/_20sdp"
                     android:layout_marginStart="@dimen/_5sdp"
-                    android:src="@drawable/upload_file"
+                    android:layout_height="@dimen/_20sdp"
+                    android:src="@drawable/cancel_close"
                     android:visibility="invisible"
-                    app:layout_constraintBottom_toBottomOf="@id/txtUploadFile"
-                    app:layout_constraintStart_toEndOf="@id/txtUploadFile"
-                    app:layout_constraintTop_toTopOf="@id/txtUploadFile"
+                    app:layout_constraintStart_toStartOf="@id/btnAlreadyPaid"
+                    android:layout_marginBottom="@dimen/_2sdp"
+                    app:layout_constraintBottom_toTopOf="@id/btnAlreadyPaid"
                     app:tint="@color/textBlue" />
 
                 <Button
                     android:id="@+id/btnFoNotAttendedMeeting"
                     style="@style/CustomButtonStyle"
                     android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_18sdp"
-                    android:backgroundTint="@color/brightOrange"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:backgroundTint="@color/blueButton"
                     android:text="@string/fo_not_attended_meeting"
                     android:textStyle="normal"
                     app:layout_constraintStart_toStartOf="parent"
@@ -678,7 +665,7 @@
                     android:id="@+id/btnNotTakenLoan"
                     style="@style/CustomButtonStyle"
                     android:layout_marginStart="@dimen/_10sdp"
-                    android:backgroundTint="@color/barnRed"
+                    android:backgroundTint="@color/blueButton"
                     android:text="@string/not_taken_loan"
                     android:textStyle="normal"
                     app:layout_constraintBottom_toBottomOf="@+id/btnFoNotAttendedMeeting"
@@ -692,7 +679,7 @@
                     style="@style/CustomButtonStyle"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_10sdp"
-                    android:backgroundTint="@color/emeraldGreen"
+                    android:backgroundTint="@color/blueButton"
                     android:text="@string/loan_taken_by_relative"
                     android:textStyle="normal"
                     app:layout_constraintStart_toStartOf="parent"
@@ -726,7 +713,7 @@
                     android:id="@+id/btnOthers"
                     style="@style/CustomButtonStyle"
                     android:layout_marginStart="@dimen/_10sdp"
-                    android:backgroundTint="@color/grey"
+                    android:backgroundTint="@color/blueButton"
                     android:text="@string/others"
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:textStyle="normal"
