--- a/app/src/main/res/layout/activity_not_spoke_to_customer.xml
+++ b/app/src/main/res/layout/activity_not_spoke_to_customer.xml
@@ -227,11 +227,11 @@
                             android:layout_width="@dimen/_20sdp"
                             android:layout_height="@dimen/_20sdp"
                             android:layout_marginStart="@dimen/_5sdp"
-                            android:src="@drawable/wifi_call"
+                            android:src="@drawable/call_round_icon"
                             app:layout_constraintBottom_toBottomOf="@id/txtMobileNumber"
                             app:layout_constraintStart_toEndOf="@id/txtMobileNumber"
                             app:layout_constraintTop_toTopOf="@id/txtMobileNumber"
-                            app:tint="@color/textBlue" />
+                             />
 
 
                         <TextView
